--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         </article>
         <nav>
             <ul>
-                <li><a class="whiteFont" href="#">FAQ</a></li>
-                <li><a class="whiteFont" href="#">Impressum</a></li>
-                <li><a class="whiteFont" href="#">AGB</a></li>
+                <li><a class="whiteFont openSansFont" href="#">FAQ</a></li>
+                <li><a class="whiteFont openSansFont" href="#">Impressum</a></li>
+                <li><a class="whiteFont openSansFont" href="#">AGB</a></li>
             </ul>
         </nav>
     </footer>
